--- a/papers/final/paper.bib
+++ b/papers/final/paper.bib
@@ -228,3 +228,12 @@
       archivePrefix={arXiv},
       primaryClass={cs.SD}
 }
+@article{cuthbert_music21_2010,
+	title = {music21: A Toolkit for Computer-Aided Musicology and Symbolic Music Data},
+	abstract = {Music21 is an object-oriented toolkit for analyzing, searching, and transforming music in symbolic (scorebased) forms. The modular approach of the project allows musicians and researchers to write simple scripts rapidly and reuse them in other projects. The toolkit aims to provide powerful software tools integrated with sophisticated musical knowledge to both musicians with little programming experience (especially musicologists) and to programmers with only modest music theory skills.},
+	pages = {6},
+	author = {Cuthbert, Michael Scott and Ariza, Christopher},
+	date = {2010},
+	langid = {english},
+	file = {Cuthbert and Ariza - 2010 - music21 A Toolkit for Computer-Aided Musicology a.pdf:/home/alex/Zotero/storage/6TU6QXT6/Cuthbert and Ariza - 2010 - music21 A Toolkit for Computer-Aided Musicology a.pdf:application/pdf},
+}
