--- a/papers/final/paper.tex
+++ b/papers/final/paper.tex
@@ -178,8 +178,9 @@ Several choices must be made in how to preprocess binary MIDI files
 into training examples for a neural network. There are multiple
 open-source Python packages that assist with the process of reading
 MIDI files from their binary on-disk representations into Python
-objects, such as pretty\_midi \cite{raffel_pretty_midi_2014} and
-Pypianoroll \cite{dong_pypianoroll_2018}.
+objects, such as pretty\_midi \cite{raffel_pretty_midi_2014},
+Pypianoroll \cite{dong_pypianoroll_2018} and music21
+\cite{cuthbert_music21_2010}.
 
 In order to accommodate polyphonic music, I will convert each MIDI
 file into a pianoroll representation, as visualized in Figure
