--- a/notebooks/model_playground.ipynb
+++ b/notebooks/model_playground.ipynb
@@ -47,13 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de25768d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# path to Schubert collection\n",
     "schubert_dir = pathlib.Path(config.MUSICNET_MIDI_DIR) / \"Schubert\"\n",
+    "#schubert_dir = pathlib.Path(config.MUSICNET_MIDI_DIR) / \"schubert\"\n",
     "\n",
     "# path to final fantasy collection\n",
     "ff_dir = pathlib.Path(config.FF_MIDI_DIR)\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cbe1ed5a",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e3a7f8b4",
    "metadata": {},
    "outputs": [],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "401c55d8",
    "metadata": {},
    "outputs": [],
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "29b75c9d",
    "metadata": {},
    "outputs": [],
@@ -182,10 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "18d3b948",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. unique notes = 312\n"
+     ]
+    }
+   ],
    "source": [
     "# get the number of unique notes\n",
     "pitchNames = sorted(set(item for item in notes))\n",
@@ -195,17 +204,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e851b0f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0',\n",
+       " '0.1',\n",
+       " '0.1.6',\n",
+       " '0.2',\n",
+       " '0.2.5',\n",
+       " '0.2.5.8',\n",
+       " '0.2.6',\n",
+       " '0.2.6.8',\n",
+       " '0.2.7',\n",
+       " '0.3',\n",
+       " '0.3.4',\n",
+       " '0.3.5',\n",
+       " '0.3.6',\n",
+       " '0.3.6.8',\n",
+       " '0.3.6.9',\n",
+       " '0.3.7',\n",
+       " '0.4',\n",
+       " '0.4.5',\n",
+       " '0.4.6',\n",
+       " '0.4.7',\n",
+       " '0.4.8',\n",
+       " '0.5',\n",
+       " '0.6',\n",
+       " '1',\n",
+       " '1.2',\n",
+       " '1.2.6',\n",
+       " '1.3',\n",
+       " '1.3.6',\n",
+       " '1.3.6.9',\n",
+       " '1.3.7',\n",
+       " '1.3.8',\n",
+       " '1.4',\n",
+       " '1.4.6',\n",
+       " '1.4.7',\n",
+       " '1.4.7.10',\n",
+       " '1.4.7.9',\n",
+       " '1.4.7.9.10',\n",
+       " '1.4.8',\n",
+       " '1.5',\n",
+       " '1.5.7',\n",
+       " '1.5.8',\n",
+       " '1.5.9',\n",
+       " '1.6',\n",
+       " '1.7',\n",
+       " '10',\n",
+       " '10.0',\n",
+       " '10.0.2',\n",
+       " '10.0.3',\n",
+       " '10.0.4',\n",
+       " '10.0.5',\n",
+       " '10.1',\n",
+       " '10.1.3',\n",
+       " '10.1.4',\n",
+       " '10.1.4.5',\n",
+       " '10.1.4.6',\n",
+       " '10.1.5',\n",
+       " '10.2',\n",
+       " '10.2.3',\n",
+       " '10.2.4',\n",
+       " '10.2.5',\n",
+       " '10.3',\n",
+       " '11',\n",
+       " '11.0',\n",
+       " '11.0.4',\n",
+       " '11.1',\n",
+       " '11.1.4',\n",
+       " '11.1.4.6',\n",
+       " '11.1.4.7',\n",
+       " '11.1.5',\n",
+       " '11.1.6',\n",
+       " '11.2',\n",
+       " '11.2.4',\n",
+       " '11.2.4.7',\n",
+       " '11.2.5',\n",
+       " '11.2.5.7',\n",
+       " '11.2.6',\n",
+       " '11.3',\n",
+       " '11.3.5',\n",
+       " '11.3.6',\n",
+       " '11.4',\n",
+       " '2',\n",
+       " '2.3',\n",
+       " '2.3.7',\n",
+       " '2.4',\n",
+       " '2.4.6',\n",
+       " '2.4.7',\n",
+       " '2.4.8',\n",
+       " '2.4.8.9',\n",
+       " '2.4.9',\n",
+       " '2.5',\n",
+       " '2.5.7',\n",
+       " '2.5.8',\n",
+       " '2.5.8.10',\n",
+       " '2.5.8.11',\n",
+       " '2.5.8.9',\n",
+       " '2.5.9',\n",
+       " '2.6',\n",
+       " '2.6.10',\n",
+       " '2.6.8',\n",
+       " '2.6.9',\n",
+       " '2.7',\n",
+       " '2.7.8',\n",
+       " '2.8',\n",
+       " '3',\n",
+       " '3.4',\n",
+       " '3.5',\n",
+       " '3.5.10',\n",
+       " '3.5.9',\n",
+       " '3.6',\n",
+       " '3.6.10',\n",
+       " '3.6.8',\n",
+       " '3.6.9',\n",
+       " '3.6.9.10',\n",
+       " '3.6.9.11',\n",
+       " '3.7',\n",
+       " '3.7.10',\n",
+       " '3.7.11',\n",
+       " '3.7.9',\n",
+       " '3.8',\n",
+       " '3.9',\n",
+       " '4',\n",
+       " '4.10',\n",
+       " '4.5',\n",
+       " '4.5.10',\n",
+       " '4.5.9',\n",
+       " '4.6',\n",
+       " '4.6.10',\n",
+       " '4.6.11',\n",
+       " '4.6.9',\n",
+       " '4.6.9.0',\n",
+       " '4.6.9.11',\n",
+       " '4.7',\n",
+       " '4.7.10',\n",
+       " '4.7.10.0',\n",
+       " '4.7.11',\n",
+       " '4.7.8',\n",
+       " '4.7.9',\n",
+       " '4.8',\n",
+       " '4.8.10',\n",
+       " '4.8.11',\n",
+       " '4.9',\n",
+       " '5',\n",
+       " '5.10',\n",
+       " '5.11',\n",
+       " '5.6.10',\n",
+       " '5.6.9',\n",
+       " '5.6.9.0',\n",
+       " '5.7',\n",
+       " '5.7.0',\n",
+       " '5.7.10',\n",
+       " '5.7.10.0',\n",
+       " '5.7.11',\n",
+       " '5.7.8',\n",
+       " '5.7.9',\n",
+       " '5.7.9.0',\n",
+       " '5.8',\n",
+       " '5.8.0',\n",
+       " '5.8.10',\n",
+       " '5.8.11',\n",
+       " '5.8.11.1',\n",
+       " '5.9',\n",
+       " '5.9.0',\n",
+       " '5.9.11',\n",
+       " '6',\n",
+       " '6.10',\n",
+       " '6.10.0',\n",
+       " '6.10.1',\n",
+       " '6.11',\n",
+       " '6.7',\n",
+       " '6.8',\n",
+       " '6.8.0',\n",
+       " '6.8.0.1',\n",
+       " '6.8.1',\n",
+       " '6.8.11',\n",
+       " '6.9',\n",
+       " '6.9.0',\n",
+       " '6.9.0.2',\n",
+       " '6.9.1',\n",
+       " '6.9.11',\n",
+       " '7',\n",
+       " '7.0',\n",
+       " '7.10',\n",
+       " '7.10.0',\n",
+       " '7.10.0.3',\n",
+       " '7.10.1',\n",
+       " '7.10.1.3',\n",
+       " '7.10.2',\n",
+       " '7.11',\n",
+       " '7.11.1',\n",
+       " '7.11.2',\n",
+       " '7.8',\n",
+       " '7.8.0',\n",
+       " '7.8.11',\n",
+       " '7.9',\n",
+       " '7.9.0',\n",
+       " '7.9.0.2',\n",
+       " '7.9.0.3',\n",
+       " '7.9.1',\n",
+       " '7.9.10',\n",
+       " '7.9.2',\n",
+       " '8',\n",
+       " '8.0',\n",
+       " '8.0.1',\n",
+       " '8.0.2',\n",
+       " '8.0.3',\n",
+       " '8.1',\n",
+       " '8.10',\n",
+       " '8.10.0',\n",
+       " '8.10.0.3',\n",
+       " '8.10.1',\n",
+       " '8.10.1.4',\n",
+       " '8.10.2',\n",
+       " '8.10.3',\n",
+       " '8.11',\n",
+       " '8.11.1',\n",
+       " '8.11.2',\n",
+       " '8.11.2.4',\n",
+       " '8.11.3',\n",
+       " '8.9',\n",
+       " '9',\n",
+       " '9.0',\n",
+       " '9.0.2',\n",
+       " '9.0.3',\n",
+       " '9.0.3.5',\n",
+       " '9.0.4',\n",
+       " '9.1',\n",
+       " '9.1.3',\n",
+       " '9.1.4',\n",
+       " '9.10',\n",
+       " '9.10.2',\n",
+       " '9.11',\n",
+       " '9.11.2',\n",
+       " '9.11.2.5',\n",
+       " '9.11.3',\n",
+       " '9.11.4',\n",
+       " '9.2',\n",
+       " 'A1',\n",
+       " 'A2',\n",
+       " 'A3',\n",
+       " 'A4',\n",
+       " 'A5',\n",
+       " 'A6',\n",
+       " 'B-1',\n",
+       " 'B-2',\n",
+       " 'B-3',\n",
+       " 'B-4',\n",
+       " 'B-5',\n",
+       " 'B-6',\n",
+       " 'B1',\n",
+       " 'B2',\n",
+       " 'B3',\n",
+       " 'B4',\n",
+       " 'B5',\n",
+       " 'B6',\n",
+       " 'C#2',\n",
+       " 'C#3',\n",
+       " 'C#4',\n",
+       " 'C#5',\n",
+       " 'C#6',\n",
+       " 'C#7',\n",
+       " 'C2',\n",
+       " 'C3',\n",
+       " 'C4',\n",
+       " 'C5',\n",
+       " 'C6',\n",
+       " 'C7',\n",
+       " 'D1',\n",
+       " 'D2',\n",
+       " 'D3',\n",
+       " 'D4',\n",
+       " 'D5',\n",
+       " 'D6',\n",
+       " 'D7',\n",
+       " 'E-2',\n",
+       " 'E-3',\n",
+       " 'E-4',\n",
+       " 'E-5',\n",
+       " 'E-6',\n",
+       " 'E-7',\n",
+       " 'E1',\n",
+       " 'E2',\n",
+       " 'E3',\n",
+       " 'E4',\n",
+       " 'E5',\n",
+       " 'E6',\n",
+       " 'E7',\n",
+       " 'F#1',\n",
+       " 'F#2',\n",
+       " 'F#3',\n",
+       " 'F#4',\n",
+       " 'F#5',\n",
+       " 'F#6',\n",
+       " 'F1',\n",
+       " 'F2',\n",
+       " 'F3',\n",
+       " 'F4',\n",
+       " 'F5',\n",
+       " 'F6',\n",
+       " 'F7',\n",
+       " 'G#1',\n",
+       " 'G#2',\n",
+       " 'G#3',\n",
+       " 'G#4',\n",
+       " 'G#5',\n",
+       " 'G#6',\n",
+       " 'G#7',\n",
+       " 'G1',\n",
+       " 'G2',\n",
+       " 'G3',\n",
+       " 'G4',\n",
+       " 'G5',\n",
+       " 'G6']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pitchNames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cd1f69af",
    "metadata": {},
    "outputs": [],
@@ -219,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c25ea6de",
    "metadata": {},
    "outputs": [],
@@ -250,10 +581,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f92ba50d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(78937, 100, 1)\n",
+      "(78937,)\n"
+     ]
+    }
+   ],
    "source": [
     "# test prepare_sequences()\n",
     "network_input, network_output = prepare_sequences(SEQUENCE_LENGTH, notes, n_vocab, note_to_int)\n",
@@ -263,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b2285669",
    "metadata": {},
    "outputs": [],
@@ -304,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "acfabb06",
    "metadata": {},
    "outputs": [],
@@ -349,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "116b8366",
    "metadata": {},
    "outputs": [],
@@ -362,8 +702,8 @@
     "    pattern = network_input[start]\n",
     "    prediction_output = []\n",
     "\n",
-    "    # generate 500 notes\n",
-    "    for note_index in range(500):\n",
+    "    # generate 100 notes\n",
+    "    for note_index in range(100):\n",
     "        prediction_input = np.reshape(pattern, (1, len(pattern), 1))\n",
     "\n",
     "        prediction = model.predict(prediction_input, verbose=0)\n",
@@ -446,6 +786,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41e34212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(lstm_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d7003852",
    "metadata": {
     "scrolled": true
@@ -458,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4b2d21b6",
    "metadata": {},
    "outputs": [],
@@ -473,10 +823,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b4d9ed6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/csslab-localdata/csslab-si/jack_working_dir/tutorial/lib/python3.9/site-packages/pandas/compat/__init__.py:97: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "# generate a new midi file from the train model\n",
     "noteFile_dir = str(schubert_dir / \"notes\")\n",
@@ -491,11 +857,14 @@
     "# load saved weights\n",
     "model = load_lstm_model()\n",
     "\n",
-    "# generate a new sequence\n",
-    "prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "for i in range(10):\n",
+    "    # generate a new sequence\n",
+    "    prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "    \n",
+    "    fn = \"lstm_output_sample_{n}.mid\".format(n=i)\n",
     "\n",
-    " # make midi file\n",
-    "create_midi(prediction_output, \"lstm_output_sample.mid\")"
+    "     # make midi file\n",
+    "    create_midi(prediction_output, fn)"
    ]
   },
   {
@@ -570,6 +939,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25ca271b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(bidirectional_lstm_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "afd7ed7c",
    "metadata": {},
    "outputs": [],
@@ -580,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9eb507c2",
    "metadata": {},
    "outputs": [],
@@ -595,10 +974,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e818ff36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# generate a new midi file from the train model\n",
     "noteFile_dir = str(schubert_dir / \"notes\")\n",
@@ -613,11 +1000,14 @@
     "# load saved weights\n",
     "model = load_bidirectional_lstm_model()\n",
     "\n",
-    "# generate a new sequence\n",
-    "prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "for i in range(10):\n",
+    "    # generate a new sequence\n",
+    "    prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "    \n",
+    "    fn = \"bidirect_lstm_output_sample_{n}.mid\".format(n=i)\n",
     "\n",
-    " # make midi file\n",
-    "create_midi(prediction_output, \"bidirect_lstm_output_sample.mid\")"
+    "     # make midi file\n",
+    "    create_midi(prediction_output, fn)"
    ]
   },
   {
@@ -761,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f724168f",
    "metadata": {},
    "outputs": [],
@@ -801,10 +1191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6f12d871",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# generate a new midi file from the train model\n",
     "noteFile_dir = str(schubert_dir / \"notes\")\n",
@@ -819,11 +1217,14 @@
     "# load saved weights\n",
     "model = load_attention_lstm_model(network_input.shape, n_vocab)\n",
     "\n",
-    "# generate a new sequence\n",
-    "prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "for i in range(10):\n",
+    "    # generate a new sequence\n",
+    "    prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "    \n",
+    "    fn = \"attention_lstm_output_sample_{n}.mid\".format(n=i)\n",
     "\n",
-    " # make midi file\n",
-    "create_midi(prediction_output, \"attention_lstm_output_sample.mid\")"
+    "     # make midi file\n",
+    "    create_midi(prediction_output, fn)"
    ]
   },
   {
@@ -898,12 +1299,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6839604a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# build the model\n",
     "wavenet_model = simplified_wavenet(n_vocab, SEQUENCE_LENGTH, X.shape)\n",
     "wavenet_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b84a849b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(wavenet_model)"
    ]
   },
   {
@@ -919,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7790e771",
    "metadata": {},
    "outputs": [],
@@ -933,10 +1346,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1c4cf0c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# generate a new midi file from the train model\n",
     "noteFile_dir = str(schubert_dir / \"notes\")\n",
@@ -951,11 +1372,14 @@
     "# load saved weights\n",
     "model = load_wavenet_model()\n",
     "\n",
-    "# generate a new sequence\n",
-    "prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "for i in range(10):\n",
+    "    # generate a new sequence\n",
+    "    prediction_output = generate_notes(model, network_input, int_to_note, n_vocab)\n",
+    "    \n",
+    "    fn = \"wavenet_output_sample_{n}.mid\".format(n=i)\n",
     "\n",
-    " # make midi file\n",
-    "create_midi(prediction_output, \"wavenet_sample_output.mid\")"
+    "     # make midi file\n",
+    "    create_midi(prediction_output, fn)"
    ]
   },
   {
