remove models folder, move vae.py out, consolidate CLIs

--- a/papers/final/alex/paper.tex
+++ b/papers/final/alex/paper.tex
@@ -263,6 +263,10 @@ generated samples.
 
 \section{Results}
 
+TODO: learning curve plot
+
+
+
 \section{Discussion}
 
 \bibliographystyle{ACM-Reference-Format}
